--- a/Baha'i/Others/ROB/V1/p007-011Ch01.html
+++ b/Baha'i/Others/ROB/V1/p007-011Ch01.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p001-006Intro.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p012-017Ch02.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -61,6 +61,10 @@
        <td VALIGN=top><small><center><a name="p9">9</a></center><p>
 	   * Qará-Guhar, heavier than Salásil, weighed about seventeen 'man' (fifty-one kilos).<p>
 	   † According to the lunar calendar. He was born 23 May 1844 and was in His ninth year.
+	   <hr>
+	   <hr>
+	   ['Qará-Guhar' and 'Salásil'] <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para127">p. 77</a>; <i>The Dawn-Breakers</i>, <a href="../../DBNN/p595-650Ch26.html#para18">p. 608</a>, <a href="../../DBNN/p595-650Ch26.html#para18">p. 609</a> footnote #15.<p>
+	   ["Abdu'l-Bahá," writes Dr. J. E. Esslemont..."] <i>The Dawn-Breakers</i>, <a href="../../DBNN/p595-650Ch26.html#para18">p. 608</a> footnote #16	   
 	   </small></td>
 </tr>
 <tr>
@@ -92,7 +96,7 @@
        <td>
 	   	   <FORM ACTION="p001-006Intro.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -100,12 +104,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p012-017Ch02.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
