--- a/Baha'i/Others/ROB/V1/p053-070Ch05.html
+++ b/Baha'i/Others/ROB/V1/p053-070Ch05.html
@@ -42,6 +42,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p53">53</a></center><p>
 	   * He was known as Subh-i-Azal (Morning of Eternity).
+	   <hr>
+	   <hr>
+	   [Mullá 'Abdu'l-Karím-i-Qazvíní, "Mírzá Ahmad'"] <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p500-526Ch23.html#para6">504</a>-5, <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para249">p. 173</a>; <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para79">p. 51</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -142,7 +145,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p60">60</a></center><p>
-	   * The eighteen disciples who first accepted the Báb.
+	   * <a href="../../DBNN/BabsAutographTablets.html#para19">The eighteen</a> disciples who first accepted the Báb.
 	   </small></td>
 </tr>
 <tr>
@@ -240,7 +243,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p67">67</a></center><p>
 	   * The name which Bahá'u'lláh assumed during His two-years' absence from Baghdád.<p>
-	   † The father-in-law of Mírzá Músá, Bahá'u'lláh's faithful brother. (See <i>The Dawn-Breakers</i>, index references to Sultán-i-Karbilá'í, Shaykh)
+	   † The father-in-law of Mírzá Músá, Bahá'u'lláh's faithful brother. (See <i>The Dawn-Breakers</i>, index references to <a href="../../DBNN/p679-685Index.html#DBNN-Sultan-i-Karbilá'í,Shaykh">Sultán-i-Karbilá'í, Shaykh</a>)
 	   <hr>
 	   13. Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', included in <i>The World Order of Bahá'u'lláh</i>, pp. 106-7.<p>
 	   14. <i>ibid.</i>, p. 107.
