--- a/Baha'i/Others/ROB/V1/p084-095Ch07.html
+++ b/Baha'i/Others/ROB/V1/p084-095Ch07.html
@@ -119,7 +119,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p91">91</a></center><p>
-	   * Not to be mistaken for Nabíl-i-A'zam, the famous Bahá'í historian, author of <i>The Dawn-Breakers</i>.<p>
+	   * Not to be mistaken for Nabíl-i-A'zam, the famous Bahá'í historian, author of <a href="../../DBNN/Cover.html"><i>The Dawn-Breakers</i></a>.<p>
 	   † Doctor of Islámic Law.<p>
 	   <hr>
 	   2. 'Bahá'í News and Reviews', a Journal of the National Spiritual Assembly of the Bahá'ís of Írán, no. 12, September 1948 The account was written by Habíb Taherzadeh.
@@ -136,7 +136,7 @@
        <td VALIGN=top><small><center><a name="p92">92</a></center><p>
 	   <hr>
 	   3. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para115">p. 143</a>, for the words quoted.<p>
-	   4. Mullá Muhammad-Sádiq-i-Khurásání is described by 'Abdu'l-Bahá in <i>Memorials of the Faithful</i>, pp. 5-8 and by Nabíl in <i>The Dawn-Breakers</i> (consult the index).<p>
+	   4. Mullá Muhammad-Sádiq-i-Khurásání is described by 'Abdu'l-Bahá in <i>Memorials of the Faithful</i>, pp. 5-8 and by Nabíl in <a href="../../DBNN/p679-685Index.html#DBNN-Sádiq-i-Khurásání,Mullá"><i>The Dawn-Breakers</i></a> (consult the index).<p>
 	   </small></td>
 </tr>
 <tr>
