--- a/Baha'i/Others/ROB/V1/p105-152Ch09.html
+++ b/Baha'i/Others/ROB/V1/p105-152Ch09.html
@@ -442,9 +442,9 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p128">128</a></center><p>
-	   * It is believed by a major sect of Shí'ah Islám that the Qá'im (the Promised One of Islám) will be the return of the Twelfth Imám. (See <i>The Dawn-Breakers</i>, Introduction, xxvii-ix (British ed.); li-iv (U.S. ed.).)<p>
+	   * It is believed by a major sect of Shí'ah Islám that the Qá'im (the Promised One of Islám) will be the return of the Twelfth Imám. (See <i>The Dawn-Breakers</i>, Introduction, xxvii-ix (British ed.); <a href="../../DBNN/Introduction.html#para71">li</a>-iv (U.S. ed.).)<p>
 	   † Some Bahá'í scholars have stated that this Tablet was revealed in Adrianople; they may well be right.<p>
-	   ‡ One of the 'Letters of the Living', the great heroine and the most outstanding woman among the apostles of the Báb.<p>
+	   ‡ One of the '<a href="../../DBNN/BabsAutographTablets.html#para18">Letters of the Living</a>', the great heroine and the most outstanding woman among the apostles of the Báb.<p>
 	   § A designation by which Bahá'u'lláh has referred to Himself as the Revealer of the Word of God.
 	   </small></td>
 </tr>
@@ -578,7 +578,7 @@
 	   * The author's great-great-grandfather.<p>
 	   † An outstanding divine who became a follower of the Báb. His first contact with the Faith came about when as an envoy of Muhammad Sháh he met the Báb for the purpose of investigating His Message. As a result, Vahíd became an ardent believer. See <a href="p325-331Apndx_III.html">Appendix III</a>.<p>
 	   <hr>
-	   15. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 367 (Brit.), pp. 496-8 (U.S.).
+	   15. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 367 (Brit.), pp. <a href="../../DBNN/p465-499Ch22.html#para91">496</a>-8 (U.S.).
 	   </small></td>
 </tr>
 <tr>
