--- a/Baha'i/Others/ROB/V1/p153-197Ch10.html
+++ b/Baha'i/Others/ROB/V1/p153-197Ch10.html
@@ -44,7 +44,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p153">153</a></center><p>
 	   <hr>
-	   <a href="../../../Baha/KI/Cover.html">The Kitáb-i-Íqán</a>
+	   <hr>
+	   <a href="../../../Baha/KI/Cover.html">The Kitáb-i-Íqán</a><p>
+	   ["The Báb had three maternal uncles..."] <i>The Dawn-Breakers</i>, <a href="../../DBNN/Introduction.html#plviii">Genealogy of the Báb</a><p>
+	   [Letters of the Living] <i>The Dawn-Breakers</i>, <a href="../../DBNN/BabsAutographTablets.html">Báb's Tablets Addressed To The Letters Of The Living</a>
 	   </small></td>
 </tr>
 <tr>
@@ -70,7 +73,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p155">155</a></center><p>
-	   * An eminent divine of great learning who became a devoted follower of the Báb in the first year of His Declaration, and later recognized the station of Bahá'u'lláh and embraced His Faith. (See pp. <a href="p221-227Ch13.html">221</a>-4, and Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, index reference.)
+	   * An eminent divine of great learning who became a devoted follower of the Báb in the first year of His Declaration, and later recognized the station of Bahá'u'lláh and embraced His Faith. (See pp. <a href="p221-227Ch13.html">221</a>-4, and Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, <a href="../../DBNN/p679-685Index.html#DBNN-Javád-i-Karbilá'í,Hájí,Siyyid">index reference</a>.)
 	   </small></td>
 </tr>
 <tr>
@@ -134,7 +137,9 @@
 	   † The Báb.<p>
 	   ‡ See Giachery, <i>Shoghi Effendi--Recollections</i>, p. 149, for a description of this happy event.<p>
 	   <hr>
-	   4. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 161 (Brit.), <a href="../../../Baha/KI/p095-258.html#para178">p. 252</a> (U.S.).
+	   4. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 161 (Brit.), <a href="../../../Baha/KI/p095-258.html#para178">p. 252</a> (U.S.).<p>
+	   <hr>
+	   <i>The Dawn-Breakers</i>, <a href="../../DBNN/Introduction.html#plviii">Genealogy of the Báb</a>	   
 	   </small></td>
 </tr>
 <tr>
