--- a/Baha'i/Others/ROB/V1/p257-282Ch16.html
+++ b/Baha'i/Others/ROB/V1/p257-282Ch16.html
@@ -173,7 +173,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p266">266</a></center><p>
 	   <hr>
-	   5. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 471-2 (Brit.), pp. 643-5 (U.S.).
+	   5. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 471-2 (Brit.), pp. <a href="../../DBNN/p595-650Ch26.html#para73">643</a>-5 (U.S.).
 	   </small></td>
 </tr>
 <tr>
