--- a/Baha'i/Others/ROB/V1/p325-331Apndx_III.html
+++ b/Baha'i/Others/ROB/V1/p325-331Apndx_III.html
@@ -17,7 +17,7 @@ page 329 - † According to the "Kashfu'l-Ghitá" (p. 81...
        <td>
 	   	   <FORM ACTION="p320-324Apndx_II.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -25,12 +25,12 @@ page 329 - † According to the "Kashfu'l-Ghitá" (p. 81...
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p332-336Apndx_IV.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -47,7 +47,10 @@ page 329 - † According to the "Kashfu'l-Ghitá" (p. 81...
 	   </blockquote>
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p325">325</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p325">325</a></center><p>
+	   <hr>
+	   <i>The Dawn-Breakers</i>, <a href="../../DBNN/p465-499Ch22.html">ch. 22</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -59,7 +62,7 @@ page 329 - † According to the "Kashfu'l-Ghitá" (p. 81...
        <td VALIGN=top><small><center><a name="p326">326</a></center><p>
 	   * His ancestral home was in Dáráb where he was born. He also had a home in Nayríz.<p>
 	   <hr>
-	   1. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 122-3 (Brit.), pp. 170-1 (U.S.).
+	   1. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 122-3 (Brit.), pp. <a href="../../DBNN/p170-198Ch09.html#para3">170</a>-1 (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -117,8 +120,8 @@ page 329 - † According to the "Kashfu'l-Ghitá" (p. 81...
        <td VALIGN=top><small><center><a name="p330">330</a></center><p>
 	   * The Báb.<p>
 	   <hr>
-	   3. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 124-6 (Brit.), pp. 173-6 (U.S.).<p>
-	   4. <i>ibid.</i>, p. 127 {Brit.), p. 177 (U.S.).
+	   3. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 124-6 (Brit.), pp. <a href="../../DBNN/p170-198Ch09.html#para8">173</a>-6 (U.S.).<p>
+	   4. <i>ibid.</i>, p. 127 {Brit.), <a href="../../DBNN/p170-198Ch09.html#para14">p. 177</a> (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -136,7 +139,7 @@ page 329 - † According to the "Kashfu'l-Ghitá" (p. 81...
        <td>
 	   	   <FORM ACTION="p320-324Apndx_II.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -144,12 +147,12 @@ page 329 - † According to the "Kashfu'l-Ghitá" (p. 81...
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p332-336Apndx_IV.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
