--- a/Baha'i/Others/ROB/V1/p332-336Apndx_IV.html
+++ b/Baha'i/Others/ROB/V1/p332-336Apndx_IV.html
@@ -17,7 +17,7 @@
        <td>
 	   	   <FORM ACTION="p325-331Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -25,12 +25,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p337-340Biblio.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -65,7 +65,7 @@
        <td VALIGN=top><small><center><a name="p333">333</a></center><p>
 	   * The other three pillars are God, the Prophet Muhammad and the Holy Imáms.<p>
 	   <hr>
-	   1. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 29-30 (Brit.), pp. 39-40 (U.S.).
+	   1. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 29-30 (Brit.), pp. <a href="../../DBNN/p019-046Ch02.html#p39">39</a>-40 (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -113,7 +113,7 @@
        <td>
 	   	   <FORM ACTION="p325-331Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -121,12 +121,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p337-340Biblio.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
