--- a/Baha'i/Others/ROB/V1/p337-340Biblio.html
+++ b/Baha'i/Others/ROB/V1/p337-340Biblio.html
@@ -81,7 +81,7 @@
 	   <i>Muhádirát</i>. An account of discussions on Bahá'í subjects. Tihrán: Bahá'í Publishing Trust, 120 B.E. (A.D. 1963).<p>
 	   <i>Risáliy-i-Ayyám-i-Tis'ih</i>. The history of the nine Bahá'í Holy Days together with a compilation of relevant Tablets. Tihrán: Bahá'í Publishing Trust, 103 B.E. (A.D. 1946); 3rd repr. 121 B.E. (A.D. 1964).<p>
 	   </blockquote>
-	   NABÍL-I-A'ZAM (Muhammad-i-Zarandí). <i>The Dawn-Breakers</i>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932. London: Bahá'í Publishing Trust, 1953.<p>
+	   NABÍL-I-A'ZAM (Muhammad-i-Zarandí). <a href="../../DBNN/Cover.html"><i>The Dawn-Breakers</i></a>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932. London: Bahá'í Publishing Trust, 1953.<p>
 	   SHOGHI EFFENDI. <i>The Advent of Divine Justice</i>. First published 1939. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1963.<p>
 	   <blockquote>
 	   <a href="../../../SE/GPB/Cover.html"><i>God Passes By</i></a>. Wilmette, Illinois: Bahá'í Publishing Trust, 1944.<p>
