--- a/Baha'i/Others/ROB/V1/p351-363Index.html
+++ b/Baha'i/Others/ROB/V1/p351-363Index.html
@@ -193,7 +193,7 @@
 	   <blockquote>community in Persia, <a href= "../V1/p084-095Ch07.html#p84">84</a>, <a href= "../V1/p246-256Ch15.html#p253">253</a>, <a href= "../V1/p283-293Ch17.html#p286">286</a>;<br> persecutions and martyrs, <a href= "../V1/p007-011Ch01.html#p7">7</a>, <a href= "../V1/p007-011Ch01.html#p11">11</a>, <a href= "../V1/p105-152Ch09.html#p138">138</a>, <a href= "../V1/p257-282Ch16.html#p264">264</a>-8, <a href= "../V1/p257-282Ch16.html#p278">278</a>-9;<br> <a name="Bábís,in'Iráq">community in 'Iráq</a>, <a href= "../V1/p053-070Ch05.html#p53">53</a>-5 , <a href= "../V1/p053-070Ch05.html#p61">61</a>, <b><a href= "../V1/p053-070Ch05.html#p67">67</a>-70</b>, <a href= "../V1/p105-152Ch09.html#p144">144</a>, <a href= "../V1/p153-197Ch10.html#p195">195</a>, <a href= "../V1/p198-209Ch11.html#p202">202</a>, <b><a href= "../V1/p198-209Ch11.html#p206">206</a>-10</b>, <a href= "../V1/p221-227Ch13.html#p225">225</a>-6, <a href= "../V1/p246-256Ch15.html#p248">248</a>, <a href= "../V1/p257-282Ch16.html#p258">258</a>-62 <i>passim</i>;<br> community divided, <a href= "../V1/p053-070Ch05.html#p68">68</a>, <a href= "../V1/p246-256Ch15.html#p248">248</a>-51;<br> Bahá'u'lláh declares His mission to, <a href= "../V1/p257-282Ch16.html#p261">261</a>-2</blockquote>
 	   Bábí Dispensation, <a href= "../V1/p018-044Ch03.html#p23">23n.</a>, <a href= "../V1/p018-044Ch03.html#p34">34</a>, <a href= "../V1/p084-095Ch07.html#p93">93n.</a>, <a href= "../V1/p153-197Ch10.html#p191">191</a> and n., <a href= "../V1/p257-282Ch16.html#p280">280</a>, <a href= "../V1/p283-293Ch17.html#p293">293</a>, <a href= "../V1/p294-314Ch18.html#p294">294</a><p>
 	   Backbiting, <a href= "../V1/p071-083Ch06.html#p79">79</a>, <a href= "../V1/p153-197Ch10.html#p187">187</a><p>
-	   Badasht, conference at, <a href= "../V1/p007-011Ch01.html#p8">8</a>, <a href= "../V1/p283-293Ch17.html#p293">293</a><p>
+	   <a name="Badasht,conferenceat"></a>Badasht, conference at, <a href= "../V1/p007-011Ch01.html#p8">8</a>, <a href= "../V1/p283-293Ch17.html#p293">293</a><p>
 	   <a name="Badí'Calendar">Badí' Calendar</a>, of the Bahá'í Dispensation, <a href= "../V1/p105-152Ch09.html#p116">116</a>-17, <a href= "../V1/p228-245Ch14.html#p228">228n.</a><p>
 	   Badí'u'lláh, Mírzá, son of Bahá'u'lláh, <a href= "../V1/p105-152Ch09.html#p131">131</a>-2<p>
 	   <a name="Baghdád">Baghdád</a>: 
@@ -398,7 +398,7 @@
 	   Kamálu'd-Dín, Hájí Mírzá, <a href= "../V1/p053-070Ch05.html#p55">55</a>-6, <a href= "../V1/p053-070Ch05.html#p60">60</a>, <a href= "../V1/p257-282Ch16.html#p260">260n.</a><p>
 	   Láhút, spiritual world of, <a href= "../V1/p053-070Ch05.html#p58">58</a><p>
 	   League of Nations, <a href= "../V1/p210-220Ch12.html#p212">212</a><p>
-	   Letters of the Living, <a href= "../V1/p053-070Ch05.html#p60">60</a> and n., <a href= "../V1/p084-095Ch07.html#p93">93</a>, <a href= "../V1/p105-152Ch09.html#p128">128n.</a>, <a href= "../V1/p153-197Ch10.html#p153">153</a>; <i>see</i> <a href="../V1/p351-363Index.html#Quddús">Quddús</a>; <a href="../V1/p351-363Index.html#Husayn-i-Bushrú'í,Mullá">Husayn-i-Bushrú'í, Mullá</a>; <a href="../V1/p351-363Index.html#Táhirih">Táhirih</a>
+	   <a name="LettersoftheLiving">Letters of the Living</a>, <a href= "../V1/p053-070Ch05.html#p60">60</a> and n., <a href= "../V1/p084-095Ch07.html#p93">93</a>, <a href= "../V1/p105-152Ch09.html#p128">128n.</a>, <a href= "../V1/p153-197Ch10.html#p153">153</a>; <i>see</i> <a href="../V1/p351-363Index.html#Quddús">Quddús</a>; <a href="../V1/p351-363Index.html#Husayn-i-Bushrú'í,Mullá">Husayn-i-Bushrú'í, Mullá</a>; <a href="../V1/p351-363Index.html#Táhirih">Táhirih</a>
 	   </small>
 	   </blockquote>
 	   </td>
@@ -604,7 +604,7 @@
 	   <i><a name="SúrihofVa'sh-Shams">Súrih of Va'sh-Shams</a></i>, <a href= "../V1/p018-044Ch03.html#p32">32</a><p>
 	   Súrihs, <i>see</i> <a href="../V1/p351-363Index.html#Kawthar">Kawthar</a>; <a href="../V1/p351-363Index.html#TabletsandWritingsofBahá'u'lláh">Tablets and Writings of Bahá'u'lláh</a> (Index, Part I)<p>
 	   <a name="Sabr,Súriy-i-"><i>Sabr, Súriy-i-</i></a> (Súrih of Patience), also titled <i>Lawh-i-Ayyúb</i> (Tablet of Job), <a href= "../V1/p105-152Ch09.html#p141">141</a> and n., <a href= "../V1/p257-282Ch16.html#p263">263</a>-73 <i>passim</i>; story of Job, <a href= "../V1/p257-282Ch16.html#p270">270</a>-71; effect upon Bábís, <a href= "../V1/p257-282Ch16.html#p271">271</a>-2<p>
-	   Tabarsí, Shaykh, fort of, <a href= "../V1/p105-152Ch09.html#p149">149</a>-50<p>
+	   <a name="Tabarsí,Shaykh,fortof"></a>Tabarsí, Shaykh, fort of, <a href= "../V1/p105-152Ch09.html#p149">149</a>-50<p>
 	   <a name="TabletofParadise">'Tablet of Paradise'</a>, fifth, <a href= "../V1/p071-083Ch06.html#p82">82</a><p>
 	   Tabríz, <a href= "../V1/p283-293Ch17.html#p284">284</a>, <a href= "../V1/p283-293Ch17.html#p293">293</a><p>
 	   Tábúr Áqásí, Yahyá, <a href= "../V1/p315-319Apndx_I.html#p317">317</a><p>
@@ -690,7 +690,7 @@
 	   <div align="right"><i>Paper</i> ISBN 0-85398-071-3</div>
 	   </blockquote>
 	   
-	   <center><b>`Akká, The Early Years 1868-77</b></center><p>
+	   <center><b>'Akká, The Early Years 1868-77</b></center><p>
 	   <blockquote>
 	   This book describes the exile and imprisonment of Bahá'u'lláh and his companions in the fortress city of  'Akká. including the tragic death of his younger son, The Purest Branch. It delineates the major themes of the <i>Kitáb-i-Aqdas</i>, the Most Holy Book revealed behind the walls of that city, and describes many other weighty Tablets, including those sent by Bahá'u'lláh to the kings and rulers of the time.<br>
 	   <i>503 pages, 36 illustrations</i>	
