--- a/Baha'i/Others/ROB/V1/p198-209Ch11.html
+++ b/Baha'i/Others/ROB/V1/p198-209Ch11.html
@@ -43,6 +43,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p198">198</a></center><p>
 	   * A cousin of the Báb, the son of Hájí Mírzá Siyyid Muhammad for whom Bahá'u'lláh revealed the Kitáb-i-Íqán.
+	   <hr>
+   	   <hr>
+	   <i>The Dawn-Breakers</i>, <a href="../../DBNN/Introduction.html#plviii">Genealogy of the Báb</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -83,7 +86,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p201">201</a></center><p>
 	   * Bahá'u'lláh ordained the Universal House of Justice as the supreme body of the Faith. It was first elected in 1963 and has its seat in Haifa.<p>
-	   † Of the other twenty-three 'elders', only nineteen have been named, i.e., the Báb and eighteen Letters of the Living.<p>
+	   † Of the other twenty-three 'elders', only nineteen have been named, i.e., the Báb and eighteen <a href="../../DBNN/BabsAutographTablets.html">Letters of the Living</a>.<p>
 	   <hr>
 	   2. Shoghi Effendi, <i>The World Order of Bahá'u'lláh</i>, p. 17, for the words quoted.
 	   </small></td>
@@ -96,7 +99,12 @@
 	   His first meeting with Bahá'u'lláh was in Tihrán around the year 1850. At that stage, however, Nabíl did not appreciate the loftiness of His station. Later, when the Bábí community seemed leaderless and the believers dispirited and confused, Nabíl in his delusion claimed to be 'Him Whom God shall make manifest', and disseminated some of his own writings among the Bábís. Then he came to Baghdád and attained the presence of Bahá'u'lláh. This time his inner eyes beheld the glory of His Revelation and his soul was quickened by His mighty Spirit. He prostrated himself at His feet and begged forgiveness for his presumption. As an act of repentance and in order to demonstrate the measure of his humility towards Bahá'u'lláh, he cut his beard, which in those days was the sym-
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p202">202</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p202">202</a></center><p>
+	   <hr>
+	   <hr>
+	   <i>The Dawn-Breakers</i>, <a href="../../DBNN/Introduction.html#plxii">Preface</a>
+	   
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -134,7 +142,7 @@
 	   * 1260 A. H. (A.D. 1844).<p>
 	   † A.D. 1887-8.<p>
 	   <hr>
-	   3. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, from the Preface.
+	   3. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, from the <a href="../../DBNN/Introduction.html#plxiii">Preface</a>.
 	   </small></td>
 </tr>
 <tr>
